Closed
Bug 1188131
Opened 10 years ago
Closed 10 years ago
Videos not hardware accelerated on YouTube
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
Tracking | Status | |
---|---|---|
firefox41 | --- | unaffected |
firefox42 | + | fixed |
People
(Reporter: rowbot, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.33 KB,
patch
|
cpearce
:
review+
|
Details | Diff | Splinter Review |
Videos are no longer being hardware accelerated on YouTube. According to the stats for nerds section, the video is an mp4. I am using the latest nightly on Windows 7.
Test URL: https://www.youtube.com/watch?v=q8ir8rVl2Z4
Last good revision: 8e5c888d0d89
First bad revision: 1f77b78797d6
Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8e5c888d0d89&tochange=1f77b78797d6
Last good revision: f8051d507461
First bad revision: de0a5cf8c4f9
Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f8051d507461&tochange=de0a5cf8c4f9
Adapter Description NVIDIA GeForce GTX 660
Adapter Drivers nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um
Adapter RAM 2048
Asynchronous Pan/Zoom wheel input enabled
Device ID 0x11c0
Direct2D Enabled true
DirectWrite Enabled true (6.2.9200.17292)
Driver Date 6-17-2015
Driver Version 10.18.13.5330
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 11 (OMTC)
Subsys ID 30693842
Supports Hardware H264 Decoding true
Vendor ID 0x10de
WebGL Renderer Google Inc. -- ANGLE (NVIDIA GeForce GTX 660 Direct3D11 vs_5_0 ps_5_0)
windowLayerManagerRemote true
AzureCanvasBackend direct2d 1.1
AzureContentBackend direct2d 1.1
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
Comment 1•10 years ago
|
||
Trevor, thanks for isolating the regression window. How do you determine whether Firefox is using the hardware decoder for a particular video?
Jean-Yves, does this bug look like a regression from bug 1165772?
Reporter | ||
Comment 2•10 years ago
|
||
Chris, I use the tool GPU-Z[1] to monitior the load on what GPU-Z calls the Video Engine. When the Video Engine usage is at 0%, the hardware video decoder on my GPU is not being utilized.
[1] http://www.techpowerup.com/gpuz/
Assignee | ||
Comment 3•10 years ago
|
||
I don't see how that's possible really. None of this code determine if video can be accelerated or not.
It could be a consequence however of not using the SharedDecoderManager anymore.
Flags: needinfo?(jyavenard)
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jyavenard
Assignee | ||
Comment 4•10 years ago
|
||
Actually, a consequence with the new MSE would have been the total opposite on what's reported here:
you couldn't disable HW acceleration which would be a problem with some GPU returning invalid frames.
Reporter | ||
Comment 5•10 years ago
|
||
I just tested and this seems to be isolated to MSE. If I disable MSE the video in comment 0 gets accelerated on YouTube and if I load the same video locally in a <video> tag without MSE the video gets accelerated.
Assignee | ||
Updated•10 years ago
|
Assignee | ||
Comment 6•10 years ago
|
||
Don't rely on MediaResource format to detect if HW acceleration can be used or not
Attachment #8644277 -
Flags: review?(cpearce)
Assignee | ||
Comment 7•10 years ago
|
||
Updated•10 years ago
|
Status: UNCONFIRMED → ASSIGNED
status-firefox41:
--- → unaffected
Ever confirmed: true
Keywords: regression
Updated•10 years ago
|
Version: Trunk → 42 Branch
Comment 9•10 years ago
|
||
[Tracking Requested - why for this release]: Regression
tracking-firefox42:
--- → ?
Updated•10 years ago
|
Attachment #8644277 -
Flags: review?(cpearce) → review+
Comment 10•10 years ago
|
||
Comment 11•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment 12•10 years ago
|
||
Tracked for 42, as it was a regression and a hit to performance. Nice that it's already fixed by the time we got to tracking it! :)
You need to log in
before you can comment on or make changes to this bug.
Description
•