Bug 1188131: Don't rely on MediaResource type to detect media format. r=cpearce

This information is often wrong and non-existent with MSE. Let the PDM decides later based on the metadata.
This prevent hardware acceleration to be turned on leading to extremely high CPU usage on high definition videos.